--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="style.css"/>
         <title>My Personal Website</title>
     </head>
     <body>
         <script src="script.js"></script>
-        <h1>Hello World!</h1>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about me">About me</a>
+            <a href="#skills">Skills</a>
+            <a href="#project">Project</a>
+            <a href="#contact">Contact</a>
+        </div>
     </body>
 </html>
