--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="style.css"/>
         <title>My Personal Website</title>
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
         <script src="script.js"></script>
+        <i class="bx bx-menu" id="menu-icon"></i>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#about me">About me</a>
@@ -14,5 +16,23 @@
             <a href="#project">Project</a>
             <a href="#contact">Contact</a>
         </div>
+        <!-- home section  -->
+         <section class="home" id="home">
+            <div class="home-content">
+                <h3>Hello, It's me</h3>
+                <h1>Shadrack Kipkemei</h1>
+                <h3>And I'm a <span>Software Engineer</span> </h3>
+                <div class="social-media">
+                    <a href="#"><i class="bx bxl-facebook"></i></a>
+                    <a href="#"><i class="bx bxl-twitter"></i></a>
+                    <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+                    <a href="#"><i class="bx bxl-linkedin"></i></a>
+                </div>
+            </div>
+            <div class="home-img">
+                <img src="https://photos.app.goo.gl/asnfn753rwL9es6X6" alt="">
+            </div>
+         </section>
+      
     </body>
 </html>
