--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <i class="bx bx-menu" id="menu-icon"></i>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#about me">About me</a>
+            <a href="#about me">About Me</a>
             <a href="#skills">Skills</a>
             <a href="#project">Project</a>
             <a href="#contact">Contact</a>
@@ -33,6 +33,16 @@
                 <img src="https://photos.app.goo.gl/asnfn753rwL9es6X6" alt="">
             </div>
          </section>
+         <!-- about section design -->
+          <section class="about" id="about">
+            <div class="about-content">
+                <h2 class="heading">About <span>Me</span></h2>
+                <h3>Software Engineer</h3>
+                <p>I'm a Software Engineer specializing in building and occasionaly designing exceptional digital experiences</p>
+                <a href="a" class="btn">Read More</a>
+            </div>
+
+          </section>
       
     </body>
 </html>
