--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="home-img">
-            <img src="https://photos.app.goo.gl/asnfn753rwL9es6X6" alt="">
+            <img src="WhatsApp Image 2024-09-22 at 17.23.22.jpeg" alt="">
         </div>
     </section>
     <!-- about section design -->
