--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="home-img">
-            <img src="WhatsApp Image 2024-09-22 at 17.23.22.jpeg" alt="">
+            <img src="WhatsApp_Image_2024-09-22_at_17.23.22-removebg-preview.png" alt="">
         </div>
     </section>
     <!-- about section design -->
