about me section

--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
    <!-- Homepage section -->
     <section id="home">
         <h1>I’m a passionate backend developer on a journey to transform ideas into robust, scalable solutions. With a knack for coding and a love for problem-solving, I’m dedicated to building seamless experiences behind the scenes. </h1>
-        <image src="/images/Shadrack.png" alt="Shadrack Kipkemei photo" class="home-image"/>
+        <image src="images/shadrack.png" alt="Shadrack Kipkemei photo" width="100%" height="100%" class="home-image"/>
     </section>
     <!-- About Me section -->
      <section id="about-me">
-
+        <h2>About Me</h2>
+        <p>
+            Hey there! I’m Shadrack Kipkemei, a budding backend developer with a passion for building robust and scalable applications. As I dive deep into the world of APIs, databases, and server-side logic, I aim to create seamless and efficient experiences for users. With a knack for problem-solving and a love for learning new technologies, I'm always on the lookout for the next challenge to conquer. When I'm not coding, you can find me exploring the latest tech trends or enjoying a good book.
+        </p>
      </section>
      <!-- Social proof section -->
       <section id="social-proof">
@@ -53,6 +56,8 @@
          <section>
 
          </section>
+
+         <script src="script.js"></script>
     
 </body>
 </html>
