--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
       </section>
      <!-- Skills section -->
       <section id="skills">
-
+        <h2>Skills</h2>
+        <ul class="skills-list">
+            <li><img src="images/htmlicon.png" alt="HTML Icon">HTML</li>
+            <li><img src="images/cssicon.png" alt="CSS Icon">CSS</li>
+            <li><img src="images/javascripticon.png" alt="JavaScript Icon">JavaScript</li>
+        </ul>
       </section>
       <!-- project section -->
        <section id="projects">
