--- a/index.html
+++ b/index.html
@@ -51,7 +51,22 @@
       </section>
       <!-- project section -->
        <section id="projects">
+        <h2>Projects</h2>
+        <div class="project-list">
+            <div class="project">
+                <h3>Project 1: Portfolio Website</h3>
+                <p>Built a personal portfolio website using HTML, CSS and JavaScript to showcase my skills and projects. Implemented responsive design for mobile and desktop views</p>
+                <a href="https://github.com/Shadrack-Kipkemei/my-personal-website.git" target="_blank">View Code</a>
 
+            </div>
+            <div class="project">
+                <h3>Project 2: Event Registration Website</h3>
+                <p>Created an Event registration website with JavaScript to manage registrations and updates. Features include user registration and update, event listing, registration form and update registration form.</p>
+                <a href="https://github.com/Shadrack-Kipkemei/event-registration.git" target="_blank">View Code</a>
+
+            </div>
+
+        </div>
        </section>
        <!-- Contact me section -->
         <section id="contact-me">
