--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,77 +8,115 @@
     <link rel="icon" type="image/x-icon" href="images/icons8-web-developer-78.png">
     <!-- Gogle font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-<!-- CSS file link -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&display=swap"
+        rel="stylesheet">
+        <!-- link icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- CSS file link -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <!-- Navigation section -->
-   <nav>
-    <h1 id="logo"><a href="#home">Shadrack kipkemei</a></h1>
-    <ul id="nav-items">
-        <li class="nav-item"><a href="#home">Home</a></li>
-        <li class="nav-item"><a href="#about-me">About Me</a></li>
-        <li class="nav-item"><a href="#skills">Skills</a></li>
-        <li class="nav-item"><a href="#projects">Projects</a></li>
-        <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
-    </ul>
-   </nav>
-   <!-- Homepage section -->
+    <!-- Navigation section -->
+    <nav>
+        <h1 id="logo"><a href="#home">Shadrack kipkemei</a></h1>
+        <ul id="nav-items">
+            <li class="nav-item"><a href="#home">Home</a></li>
+            <li class="nav-item"><a href="#about-me">About Me</a></li>
+            <li class="nav-item"><a href="#skills">Skills</a></li>
+            <li class="nav-item"><a href="#projects">Projects</a></li>
+            <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
+        </ul>
+    </nav>
+    <!-- Homepage section -->
     <section id="home">
-        <h1>I’m a passionate backend developer on a journey to transform ideas into robust, scalable solutions. With a knack for coding and a love for problem-solving, I’m dedicated to building seamless experiences behind the scenes. </h1>
-        <image src="images/shadrack.png" alt="Shadrack Kipkemei photo" width="100%" height="100%" class="home-image"/>
+        <h1>I’m a passionate backend developer on a journey to transform ideas into robust, scalable solutions. With a
+            knack for coding and a love for problem-solving, I’m dedicated to building seamless experiences behind the
+            scenes. </h1>
+        <image src="images/shadrack.png" alt="Shadrack Kipkemei photo" width="100%" height="100%" class="home-image" />
     </section>
     <!-- About Me section -->
-     <section id="about-me">
+    <section id="about-me">
         <h2>About Me</h2>
         <p>
-            Hey there! I’m Shadrack Kipkemei, a budding backend developer with a passion for building robust and scalable applications. As I dive deep into the world of APIs, databases, and server-side logic, I aim to create seamless and efficient experiences for users. With a knack for problem-solving and a love for learning new technologies, I'm always on the lookout for the next challenge to conquer. When I'm not coding, you can find me exploring the latest tech trends or enjoying a good book.
+            Hey there! I’m Shadrack Kipkemei, a budding backend developer with a passion for building robust and
+            scalable applications. As I dive deep into the world of APIs, databases, and server-side logic, I aim to
+            create seamless and efficient experiences for users. With a knack for problem-solving and a love for
+            learning new technologies, I'm always on the lookout for the next challenge to conquer. When I'm not coding,
+            you can find me exploring the latest tech trends or enjoying a good book.
         </p>
-     </section>
-     <!-- Social proof section -->
-      <section id="social-proof">
+    </section>
+    <!-- Social proof section -->
+    <section id="social-proof">
 
-      </section>
-     <!-- Skills section -->
-      <section id="skills">
+    </section>
+    <!-- Skills section -->
+    <section id="skills">
         <h2>Skills</h2>
         <ul class="skills-list">
             <li><img src="images/htmlicon.png" alt="HTML Icon">HTML</li>
             <li><img src="images/cssicon.png" alt="CSS Icon">CSS</li>
             <li><img src="images/javascripticon.png" alt="JavaScript Icon">JavaScript</li>
         </ul>
-      </section>
-      <!-- project section -->
-       <section id="projects">
+    </section>
+    <!-- project section -->
+    <section id="projects">
         <h2>Projects</h2>
         <div class="project-list">
             <div class="project">
                 <h3>Project 1: Portfolio Website</h3>
-                <p>Built a personal portfolio website using HTML, CSS and JavaScript to showcase my skills and projects. Implemented responsive design for mobile and desktop views</p>
+                <p>Built a personal portfolio website using HTML, CSS and JavaScript to showcase my skills and projects.
+                    Implemented responsive design for mobile and desktop views</p>
                 <a href="https://github.com/Shadrack-Kipkemei/my-personal-website.git" target="_blank">View Code</a>
 
             </div>
             <div class="project">
                 <h3>Project 2: Event Registration Website</h3>
-                <p>Created an Event registration website with JavaScript to manage registrations and updates. Features include user registration and update, event listing, registration form and update registration form.</p>
+                <p>Created an Event registration website with JavaScript to manage registrations and updates. Features
+                    include user registration and update, event listing, registration form and update registration form.
+                </p>
                 <a href="https://github.com/Shadrack-Kipkemei/event-registration.git" target="_blank">View Code</a>
 
             </div>
 
         </div>
-       </section>
-       <!-- Contact me section -->
-        <section id="contact-me">
+    </section>
+    <!-- Contact me section -->
+    <section id="contact-me">
+        <h2>Contact Me</h2>
+        <p>If you want to get in touch, feel free to out using the form below. </p>
+        <form id="contact-form" action="https://formspree.io/f/xbljlqdw" method="POST">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
 
-        </section>
-        <!-- Footer section -->
-         <section>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="_replyto" required>
 
-         </section>
+            <label for="message">Message</label>
+            <textarea name="message" id="message" rows="4" required></textarea>
 
-         <script src="script.js"></script>
-    
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+    <!-- Footer section -->
+    <section>
+        <footer id="footer">
+            <div class="footer-container">
+                <p>&copy; 2024 Shadrack Kipkemei. All Rights Reserved.</p>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/shadrack-kipkemei-151496229/" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
+                    <a href="https://github.com/Shadrack-Kipkemei" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+                    <a href="https://x.com/shadrac20178002" target="_blank"><i class="fab fa-twitter"></i>Twitter</a>
+                </div>
+            </div>
+
+        </footer>
+    </section>
+
+    <script src="script.js"></script>
+
 </body>
+
 </html>
